test/sema/lambdas/lambda_inference_prefers_caller_body_err.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
fn main() {
  // CHECK: [[# @LINE + 1 ]]:14: error: explicit type annotations are needed to infer the type of 'x'
  let f = ->(x) { 
    if x {
      return 0; 
    }

    return 0;
  };

  f(0);
}

